Cleanup how we pull field attributes in extract snippets